<resources>
    <string name="app_name">Daily Tech</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="banner_ad_unit_id">ca-app-pub-6593579486793864/7280030636</string>
    <string name="test">YOUR_ADMOB_APP_ID</string>
    <string name="article_image">Article Image</string>
    <string name="sample_title">Google IO leaves everyone in shock</string>
    <string name="sample_author">By Anshdeep Singh</string>
    <string name="overview">Overview</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="sample_overview">Startups participating in the Startup Battlefield have all been hand-picked to participate in our highly competitive startup competition. They all presented..</string>
    <string name="btn_text">Read full article on TechCrunch</string>
    <string name="dash">-</string>
    <string name="sample_subtitle">TechCrunch</string>
    <string name="no_data">No Data</string>
    <string name="no_news_found">No News Found :-(</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_text">Please Connect to Internet and click refresh icon below</string>
    <string name="refresh">Refresh</string>
    <string name="sample_time">Published 8 hours ago</string>
    <string name="technical_news_sources">Technical news sources</string>
    <string name="powered_text">-Powered By News API</string>
    <string name="no_articles">No favorite articles added!</string>
    <string name="read_full_article">Read full article on</string>
    <string name="internet_connection_msg">Please turn on your internet connection to view full article!</string>
    <string name="article_added">Article added to favorites!</string>
    <string name="article_removed">Article removed from favorites!</string>
    <string name="my_favorite_title">Daily Tech - My Favorite Articles</string>
    <string name="techcrunch">TechCrunch</string>
    <string name="favorites">Favorites</string>
    <string name="ars_technica">Ars Technica</string>
    <string name="engadget">Engadget</string>
    <string name="hacker_news">Hacker News</string>
    <string name="recode">Recode</string>
    <string name="techradar">TechRadar</string>
    <string name="the_next_web">The Next Web</string>
    <string name="the_verge">The Verge</string>
    <string name="by">By</string>


    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
</resources>
