<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="310dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    card_view:cardUseCompatPadding="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/article_image"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round"/>


        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thumbnail"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="20sp"
            tools:text="@string/sample_title"/>

        <TextView
            android:id="@+id/published_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_title"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="15sp"
            tools:text="@string/sample_time"/>


    </RelativeLayout>


</android.support.v7.widget.CardView>
